[package]
name = "solana-checker"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
base64 = "0.22.1"
bs58 = "0.5.1"
ed25519-dalek = "2.1.1"
rand = "0.9.1"
serde = "1.0.219"
serde_json = "1.0.140"
solana-sdk = "2.3.1"
spl-associated-token-account = "7.0.0"
spl-token = "8.0.0"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
